# demo

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
docs/: collateral_tiers.md  overview.md  zkML Bootcamp - Q1-25_v04.pptx
ezkl/: Cargo.toml  Halo2Verifier.sol  README.md  convert_model.py  copy_artifacts.sh  create_model.py  run_ezkl.sh
ezkl/proof_generation/: Halo2Verifier.sol
ezkl/script/: proof_lookup.json
ezkl/src/: Halo2Verifier.sol  direct_ezkl.rs  main.rs  onnx_converter.rs  processor.rs
src/: main.rs
synthetic_data/: Cargo.toml  README.md  credit_data.json  credit_model.json  input.json
synthetic_data/src/: lib.rs  main.rs  model_trainer.rs  processor.rs  synthetic_data.rs
