[package]
name = "synthetic_data"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
linfa = "0.6.1"
linfa-linear = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tract-onnx = "0.19.6"
argmin = "0.10.0"
